--- a/product_manager/templates/bootstrap-admin-template-free/base.html
+++ b/product_manager/templates/bootstrap-admin-template-free/base.html
@@ -46,13 +46,12 @@
                 </div>
                 <div class="navbar-nav w-100">
                     {% if user.is_authenticated %}
-                    <a href="" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>CRUD</a>
                     <a href="" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Consulta</a>
-                    <a href="" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Listagem</a>
+                    <a href="{% url 'listagem' %}" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Listagem</a>
                     <a href="" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Sobre</a>
                     {% else %}
                     <a href="" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Consulta</a>
-                    <a href="" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Listagem</a>
+                    <a href="{% url 'listagem' %}" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Listagem</a>
                     <a href="" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Sobre</a>
 
                     {% endif %}
@@ -90,7 +89,7 @@
 
 
     <!-- JavaScript Libraries -->
-    <script src="{https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'lib/chart/chart.min.js' %}"></script>
     <script src="{% static 'lib/easing/easing.min.js' %}"></script>
