--- a/product_manager/templates/bootstrap-admin-template-free/register.html
+++ b/product_manager/templates/bootstrap-admin-template-free/register.html
@@ -44,29 +44,25 @@
                             <a href="index.html" class="">
                                 <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>DASHMIN</h3>
                             </a>
-                            <h3>Sign Up</h3>
+                            <h3>Registro</h3>
+                        </div>
+                        <form action="{% url 'register' %}" method='POST'> {% csrf_token %}
+                        <div class="form-floating mb-3">
+                            <input name='name' type="text" class="form-control" id="floatingText" placeholder="jhondoe">
+                            <label for="floatingText">Nome de usuário</label>
                         </div>
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="floatingText" placeholder="jhondoe">
-                            <label for="floatingText">Username</label>
-                        </div>
-                        <div class="form-floating mb-3">
-                            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                            <label for="floatingInput">Email address</label>
+                            <input name='email' type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                            <label for="floatingInput">Endereço de e-mail</label>
+                        
                         </div>
                         <div class="form-floating mb-4">
-                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                            <label for="floatingPassword">Password</label>
+                            <input name='password' type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                            <label for="floatingPassword">Senha</label>
                         </div>
-                        <div class="d-flex align-items-center justify-content-between mb-4">
-                            <div class="form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                            </div>
-                            <a href="">Forgot Password</a>
-                        </div>
-                        <button type="submit" class="btn btn-primary py-3 w-100 mb-4">Sign Up</button>
-                        <p class="text-center mb-0">Already have an Account? <a href="">Sign In</a></p>
+                        <button type="submit" class="btn btn-primary py-3 w-100 mb-4">Registro</button>
+                        <p class="text-center mb-0">Já possui uma conta? <a href="{% url 'login' %}">Faça login</a></p>
+                    </form>
                     </div>
                 </div>
             </div>
